@@ -1,3 +1,10 @@
+2004-10-21  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* calendar/e-cal-backend-exchange-factory.c (_todos_new_backend) :
+	Changed the object type from ECalBackendExchange to 
+	ECalBackendExchangeTask
+	(_events_new_backend) : Similarly changed to ECalBackendExchangeCalendar
+
 2004-10-18  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* lib/Makefile.am: Reorder the LDAP_LIBS
